    * Added cvc promote command. (CNY-1304)
    * Added interface (but no command line option) for performing
      partial clones, where only some components out of a package
      are cloned based on byDefault settings. (CNY-1389)
  o Bug Fixes:
    * Local flags are now cleared after each group cook, meaning that
      multipass group cooks will have the correct local flavor.  (CNY-1400)

Changes in 1.1.18:
  o Major Changes:
    * Changesets are now indexed by a pathId,fileId combination instead of
      just by pathId. This should eliminate the vast majority of conflicts
      when creating groups containing multiple flavors of the same trove.
      Old clients will be served old-format changesets by the repository,
      and new clients continue to support old format changesets. Old and
      new format changes can be merged into a single changeset (CNY-1314).

  o Client Changes:
    * The conary rblist --flavors command now properly displays trove
      flavors. (CNY-1255)
    * When resolving dependencies while updating, conary will now search 
      the latest versions of packages for every label in your installLabelPath
      first before searching the histories of those labels.  This should make
      sure that conary prefers installing maintained troves over unmaintained 
      ones. (CNY-1312)
    * The Conary client API now has a new call, iterRollbacksList(), iterating
      over the rollback name and object. (CNY-1390)
    * Added the --just-db argument to the conary rollback command. (CNY-1398)

  o Build Changes:
    * A list of rPath mirrors for source components has been added.
    * Group recipes now support a setSearchPath method.  This provides a way
      to tell groups how to find and resolve packages by specifying a list
      containing either packages or labels. (CNY-1316)
    * The group addAll command supports "flatten" - a way to cause all troves
      in all subgroups to be included directly in the top level group - 