@@ -117,6 +117,9 @@ class ConaryClient(ClientClone, ClientBranch, ClientUpdate):
     def getRepos(self):
         return self.repos
 
+    def setRepos(self, repos):
+        self.repos = repos
+
     def getMetadata(self, troveList, label, cacheFile = None,
                     cacheOnly = False, saveOnly = False):
         md = {}
